--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,12 +11,29 @@
                     <a href="#home">Služby</a>
                     <a href="#home">Náše technologie</a>
                     <a href="#home">Jak pracujeme</a>
-                    <a href="#home">Kontaktujte nás nyní</a>
+                    <button class="contact-us-navbar">
+                        Kontaktujte nás nyní
+                    </button>
                 </li>
             </ul>
         </nav>
         <div class="row">
-            test
+            <div class="header-left">
+                <div class="title">
+                    <h1>
+                        Budujeme chytrá řešení
+                        <span class="title">pro zítřek</span>
+                        <img src="assets/shield.png" alt="">
+                    </h1>
+                </div>
+                <p>Mladí, ambiciózní a připraveni proměnit vaše nápady v efektivní digitální řešení. Pojďme společně vytvořit něco skvělého.</p>
+                <div class="buttons">
+                    <button class="main-cta">
+                        Napište nám
+                        <img src="assets/message-icon.svg" alt="">
+                    </button>
+                </div>
+            </div>
             <img src="assets/header_main_icon.png" alt="">
         </div>
     </div>
