add About Us card component and integrate into About Us page

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -3,4 +3,6 @@
         <h1>O nás</h1>
         <p>Jsme dva nadšenci do IT a technologií, kteří věří, že inovace mají sílu měnit svět. S vášní pro technologie a neustálou touhou objevovat nové možnosti se snažíme přinášet svěží a efektivní řešení do IT světa. Rádi se pouštíme.</p>
     </div>
+    <app-about-us-card [backgroundImage]="'/assets/about-bg.png'"></app-about-us-card>
+    <app-about-us-card [backgroundImage]="'/assets/about-bg-2.png'"></app-about-us-card>
 </div>
