--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 <app-about-us></app-about-us>
 <app-our-services></app-our-services>
+<app-why-us></app-why-us>
 <app-technologies></app-technologies>
 <app-footer></app-footer>
