--- a/src/app/components/about-us-card/about-us-card.component.scss
+++ b/src/app/components/about-us-card/about-us-card.component.scss
@@ -6,7 +6,7 @@
   background-color: red;
   display: flex;
   flex-direction: column;
-  justify-content: space-between; /* This will push the content to the top and bottom */
+  justify-content: space-between;
 }
 
 h2 {
