--- a/src/app/our-services/our-services.component.scss
+++ b/src/app/our-services/our-services.component.scss
@@ -30,4 +30,15 @@
 .container-cards {
   display: flex;
   flex-direction: row;
+  gap: 5%;
+  justify-content: center;
+}
+
+.container-text {
+  margin-bottom: 5%;
+  margin-left: 5%;
+}
+
+.common-text-description {
+  max-width: 40%;
 }
