logo card impl init

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,5 @@
 <app-our-services></app-our-services>
 <app-why-us></app-why-us>
 <app-technologies></app-technologies>
+<app-how-we-work></app-how-we-work>
 <app-footer></app-footer>
