--- a/src/app/how-we-work/how-we-work.component.html
+++ b/src/app/how-we-work/how-we-work.component.html
@@ -1,8 +1,14 @@
 <div class="main-container">
   <div class="left-column">
-    <h3><span class="gradient-text">Jak</span><span> pracujeme?</span></h3>
-    <p>Každý projekt je pro nás příběhem, který tvoříme krok za krokem. Od prvotní konzultace až po finální dodání dbáme na kvalitu, inovaci a spokojenost našich klientů.</p>
-    <app-logo-card></app-logo-card>
+      <div class="left-column-content">
+          <h3><span class="gradient-text">Jak</span><span> pracujeme?</span></h3>
+          <p>Každý projekt je pro nás příběhem, který tvoříme krok za krokem. Od prvotní konzultace až po finální dodání dbáme na kvalitu, inovaci a spokojenost našich klientů.</p>
+          <app-logo-card></app-logo-card>
+      </div>
   </div>
-  <div class="right-column"></div>
+  <div class="right-column">
+      <div class="stepper-outer-container">
+
+      </div>
+  </div>
 </div>
