--- a/src/app/how-we-work/how-we-work.component.scss
+++ b/src/app/how-we-work/how-we-work.component.scss
@@ -32,4 +32,12 @@
 
 .left-column-content {
   width: 75%;
+  display: flex;
+  flex-direction: column;
+  margin-left: 15%;
+}
+
+.sub-title {
+  max-width: 65%;
+  margin-bottom: 10%;
 }
