--- a/src/app/shared/logo-card/logo-card.component.scss
+++ b/src/app/shared/logo-card/logo-card.component.scss
@@ -1,7 +1,7 @@
 .card {
   background-image: url("/assets/tech-bg.png");
   height: 10vh;
-  max-width: 20vw;
+  width: 16vw;
   background-size: cover;
   background-position: center;
   background-color: #278aff;
