restructure, routes assets UPD

--- a/src/app/feature/technologies/technologies.component.html
+++ b/src/app/feature/technologies/technologies.component.html
@@ -1,6 +1,6 @@
 <div class="technologies">
     <div class="card">
-        <img src="/assets/tech-bg.png" alt="Background Image">
+        <img src="/assets/tech-bg.png" alt="tech background">
         <div class="content">
             <div class="header-row">
                 <h1>Moderní technologie pro vaše podnikání</h1>
@@ -11,8 +11,8 @@
                     <app-card-img [iconSrc]="tech.iconSrc" [iconAlt]="tech.iconAlt"></app-card-img>
                   </div>
             </div>
-          
-              
+
+
         </div>
     </div>
 </div>
