--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer>
     <div class="logo">
-        <img src="assets/logo.svg" alt="Logo">
+        <img src="/assets/logo.svg" alt="Logo">
         <h1>BrivexTech</h1>
     </div>
     <p>Maksim Bulanovich, IČO: 21886261, fyzická osoba podnikající dle živnostenského zákona, zapsán v živnostenském rejstříku vedeném Městským úřadem Černošice, územní pracoviště Praha-západ.</p>
