--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -1,5 +1,5 @@
 .header {
-  background-image: url("/assets/header_bg.svg");
+  background-image: url("/src/assets/header_bg.svg");
   background-size: cover;
   background-position: center;
   height: 700px;
