--- a/src/app/feature/why-us/why-us.component.html
+++ b/src/app/feature/why-us/why-us.component.html
@@ -1,6 +1,6 @@
 <div class="why-us">
     <img src="/assets/svg/why-us-bg.svg" alt="Abstract" class="background">
-    <img class="moon" src="/assets/svg/moon.png" alt="Moon image">
+    <img class="moon" src="/assets/svg/moon.png" alt="Moon">
     <div class="content">
         <h1>
             Proč vybrat
@@ -11,7 +11,5 @@
               <app-why-us-card [image]="card.image" [text]="card.text"></app-why-us-card>
             </ng-container>
           </div>
-          
-       
     </div>
 </div>
