--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -2,7 +2,7 @@
     <div class="content">
         <nav class="navbar">
             <div class="logo">
-                <img src="assets/logo.svg" alt="Logo">
+                <img src="/assets/logo.svg" alt="Logo">
                 <h1>BrivexTech</h1>
             </div>
             <ul>
@@ -23,18 +23,18 @@
                     <h1>
                         Budujeme chytrá řešení
                         <span class="title">pro zítřek</span>
-                        <img src="assets/shield.png" alt="">
+                        <img src="/assets/shield.png" alt="">
                     </h1>
                 </div>
                 <p>Mladí, ambiciózní a připraveni proměnit vaše nápady v efektivní digitální řešení. Pojďme společně vytvořit něco skvělého.</p>
                 <div class="buttons">
                     <button class="main-cta">
                         Napište nám
-                        <img src="assets/message-icon.svg" alt="">
+                        <img src="/assets/message-icon.svg" alt="">
                     </button>
                 </div>
             </div>
-            <img src="assets/header_main_icon.png" alt="">
+            <img src="/assets/header_main_icon.png" alt="">
         </div>
     </div>
 </header>
