--- a/src/app/shared/components/about-us-card/about-us-card.component.scss
+++ b/src/app/shared/components/about-us-card/about-us-card.component.scss
@@ -22,7 +22,7 @@ h2 {
 .card {
   width: 100%;
   height: 302px;
-  background-image: url("/assets/about-bg.png");
+  background-image: url("/src/assets/about-bg.png");
   background-size: contain;
   background-repeat: no-repeat;
   object-fit: cover;
