--- a/src/app/shared/components/logo-card/logo-card.component.html
+++ b/src/app/shared/components/logo-card/logo-card.component.html
@@ -1,6 +1,6 @@
 <div class="card">
     <div class="header-row">
-      <img src="assets/svg/logo.svg" alt="logo">
+      <img src="../../../../assets/svg/logo.svg" alt="logo">
     </div>
     <div class="sub-row">
       <span class="title">BrivexTech</span>
