--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,5 @@
 <app-why-us></app-why-us>
 <app-technologies></app-technologies>
 <app-how-we-work></app-how-we-work>
+<app-contacts></app-contacts>
 <app-footer></app-footer>
