contact form init impl, errors console fixed

--- a/src/app/shared/components/logo-card/logo-card.component.scss
+++ b/src/app/shared/components/logo-card/logo-card.component.scss
@@ -1,5 +1,5 @@
 .card {
-  background-image: url("/src/assets/tech-bg.png");
+  background-image: url("/assets/tech-bg.png");
   height: 10vh;
   width: 16vw;
   background-size: cover;
