--- a/src/app/feature/contacts/contacts.component.html
+++ b/src/app/feature/contacts/contacts.component.html
@@ -10,5 +10,7 @@
       <div class="contact-icon"><img src="assets/svg/white-mail.svg" alt="telegram"></div>
     </div>
   </div>
-  <div class="right-side"></div>
+  <div class="right-side">
+    <app-contact-form></app-contact-form>
+  </div>
 </div>
