--- a/src/app/shared/components/about-us-card/about-us-card.component.scss
+++ b/src/app/shared/components/about-us-card/about-us-card.component.scss
@@ -3,27 +3,63 @@
   height: 387px;
   margin: 7.5px;
   background-repeat: no-repeat;
-  background-color: red;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-}
-
-h2 {
-  margin: 0; /* Remove default margin from h2 */
+  justify-content: start;
+  align-items: center;
+  position: relative;
 }
 
 .content-wrapper {
   width: 100%;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 104px;
 }
 
 .card {
+  margin-top: 85px;
   width: 100%;
   height: 302px;
-  background-image: url("/assets/about-bg.png");
   background-size: contain;
   background-repeat: no-repeat;
   object-fit: cover;
+  position: absolute;
+  z-index: 1;
+}
+
+.avatar {
+  height: 148px;
+  width: 148px;
+  background-color: white;
+  position: absolute;
+  z-index: 2;
+  border-radius: 50px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  border: 12px solid white;
+}
+
+h2 {
+  color: #1a394e;
+  font-family: "Inter";
+  font-size: 22px;
+  font-weight: 700;
+}
+
+p {
+  color: #808080;
+  font-family: "Poppins";
+  font-size: 16px;
+  font-weight: 600;
+  margin: 0;
+}
+
+.contact-row {
+  margin-top: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
 }
