--- a/src/app/shared/components/why-us-card/why-us-card.component.scss
+++ b/src/app/shared/components/why-us-card/why-us-card.component.scss
@@ -4,6 +4,7 @@
   background-color: #f6f8fc;
   border-radius: 40px;
   padding: 10px 10px;
+  transition: transform 0.3s, box-shadow 0.3s;
 }
 
 .row {
