--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,6 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
-@use '@angular/material' as mat;
+@use "@angular/material" as mat;
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
@@ -20,15 +19,17 @@ $brivex-website-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$brivex-website-theme: mat.define-light-theme((
-  color: (
-    primary: $brivex-website-primary,
-    accent: $brivex-website-accent,
-    warn: $brivex-website-warn,
-  ),
-  typography: mat.define-typography-config(),
-  density: 0
-));
+$brivex-website-theme: mat.define-light-theme(
+  (
+    color: (
+      primary: $brivex-website-primary,
+      accent: $brivex-website-accent,
+      warn: $brivex-website-warn,
+    ),
+    typography: mat.define-typography-config(),
+    density: 0,
+  )
+);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
@@ -43,5 +44,13 @@ body {
   padding: 0;
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+  margin-left: 0;
+  margin-right: 0;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
