--- a/src/app/shared/components/stepper/stepper.component.html
+++ b/src/app/shared/components/stepper/stepper.component.html
@@ -1,17 +1,10 @@
-<mat-vertical-stepper>
-  <mat-step label="Konzultace a analýza">
-    <p>Každý projekt je pro nás příběhem, který tvoříme krok za krokem. Od prvotní konzultace až po finální dodání dbáme na kvalitu, inovaci a spokojenost našich klientů.</p>
-  </mat-step>
-  <mat-step label="Konzultace a analýza">
-    <p>Každý projekt je pro nás příběhem, který tvoříme krok za krokem. Od prvotní konzultace až po finální dodání dbáme na kvalitu, inovaci a spokojenost našich klientů.</p>
-  </mat-step>
-  <mat-step label="Konzultace a analýza">
-    <p>Každý projekt je pro nás příběhem, který tvoříme krok za krokem. Od prvotní konzultace až po finální dodání dbáme na kvalitu, inovaci a spokojenost našich klientů.</p>
-  </mat-step>
-  <mat-step label="Konzultace a analýza">
-    <p>Každý projekt je pro nás příběhem, který tvoříme krok za krokem. Od prvotní konzultace až po finální dodání dbáme na kvalitu, inovaci a spokojenost našich klientů.</p>
-  </mat-step>
-  <mat-step label="Konzultace a analýza">
-    <p>Každý projekt je pro nás příběhem, který tvoříme krok za krokem. Od prvotní konzultace až po finální dodání dbáme na kvalitu, inovaci a spokojenost našich klientů.</p>
+<mat-vertical-stepper #stepper>
+  <mat-step
+    onFocus
+    *ngFor="let step of steps; let i = index"
+    [label]="step.label"
+    (mouseover)="onStepHover(stepper, i)">
+    <p class="matStepId"
+    >{{ step.content }}</p>
   </mat-step>
 </mat-vertical-stepper>
