--- a/src/app/feature/why-us/why-us.component.scss
+++ b/src/app/feature/why-us/why-us.component.scss
@@ -20,7 +20,7 @@
 .content {
   position: relative;
   z-index: 2;
-  margin: 130px 550px;
+  margin: 0 5% 0 5%;
 }
 
 img {
@@ -31,7 +31,6 @@ img {
   right: 0;
   position: absolute;
   top: 400px;
-  margin-right: 350px;
   transform: translateY(-50%);
   width: 30%;
 }
