--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -5,17 +5,15 @@
                 <img src="/assets/logo.svg" alt="Logo">
                 <h1>BrivexTech</h1>
             </div>
-            <ul>
-                <li>
-                    <a href="#home">O nás</a>
-                    <a href="#home">Služby</a>
-                    <a href="#home">Náše technologie</a>
-                    <a href="#home">Jak pracujeme</a>
-                    <button class="contact-us-navbar">
-                        Kontaktujte nás nyní
-                    </button>
-                </li>
-            </ul>
+            <div class="nav-container">
+              <a href="#home">O nás</a>
+              <a href="#home">Služby</a>
+              <a href="#home">Náše technologie</a>
+              <a href="#home">Jak pracujeme</a>
+              <button class="contact-us-navbar">
+                Kontaktujte nás nyní
+              </button>
+            </div>
         </nav>
         <div class="row">
             <div class="header-left">
