refactor header layout and styles for improved responsiveness

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,22 +1,22 @@
 <header class="header">
+    <nav class="navbar">
+        <div class="logo">
+            <img src="/assets/logo.svg" alt="Logo">
+            <h1>BrivexTech</h1>
+        </div>
+        <ul>
+            <li>
+                <a href="#home">O nás</a>
+                <a href="#home">Služby</a>
+                <a href="#home">Náše technologie</a>
+                <a href="#home">Jak pracujeme</a>
+                <button class="contact-us-navbar">
+                    Kontaktujte nás nyní
+                </button>
+            </li>
+        </ul>
+    </nav>
     <div class="content">
-        <nav class="navbar">
-            <div class="logo">
-                <img src="/assets/logo.svg" alt="Logo">
-                <h1>BrivexTech</h1>
-            </div>
-            <ul>
-                <li>
-                    <a href="#home">O nás</a>
-                    <a href="#home">Služby</a>
-                    <a href="#home">Náše technologie</a>
-                    <a href="#home">Jak pracujeme</a>
-                    <button class="contact-us-navbar">
-                        Kontaktujte nás nyní
-                    </button>
-                </li>
-            </ul>
-        </nav>
         <div class="row">
             <div class="header-left">
                 <div class="title">
@@ -34,7 +34,7 @@
                     </button>
                 </div>
             </div>
-            <img src="/assets/header_main_icon.png" alt="">
+            <img class="header-img" src="/assets/header_main_icon.png" alt="">
         </div>
     </div>
 </header>
