composed landing borders upd

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
-<app-header></app-header>
-<app-about-us></app-about-us>
-<app-our-services></app-our-services>
-<app-why-us></app-why-us>
-<app-technologies></app-technologies>
-<app-how-we-work></app-how-we-work>
-<app-contacts></app-contacts>
-<app-footer></app-footer>
+<div class="compose-container">
+  <app-header></app-header>
+  <app-about-us></app-about-us>
+  <app-our-services></app-our-services>
+  <app-why-us></app-why-us>
+  <app-technologies></app-technologies>
+  <app-how-we-work></app-how-we-work>
+  <app-contacts></app-contacts>
+  <app-footer></app-footer>
+</div>
