--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,21 @@
 .compose-container {
-  margin: 0 15% 0 15%;
+  margin: 0;
+}
+
+@media (min-width: 1920px) {
+  .compose-container {
+    margin: 0 15% 0 15%;
+  }
+}
+
+@media (min-width: 1280px) and (max-width: 1919px) {
+  .compose-container {
+    margin: 0 5% 0 5%;
+  }
+}
+
+@media (max-width: 1279px) {
+  .compose-container {
+    margin: 0;
+  }
 }
