--- a/src/app/feature/how-we-work/how-we-work.component.html
+++ b/src/app/feature/how-we-work/how-we-work.component.html
@@ -1,14 +1,18 @@
 <div class="main-container">
-  <div class="left-column">
-      <div class="left-column-content">
-          <h3><span class="gradient-text">Jak</span><span> pracujeme?</span></h3>
-          <p class="sub-title">Každý projekt je pro nás příběhem, který tvoříme krok za krokem. Od prvotní konzultace až po finální dodání dbáme na kvalitu, inovaci a spokojenost našich klientů.</p>
-          <app-logo-card></app-logo-card>
-      </div>
-  </div>
-  <div class="right-column">
-      <div class="stepper-outer-container">
-          <app-stepper></app-stepper>
-      </div>
-  </div>
+    <img src="/assets/svg/how-we-work-bg.png" alt="">
+    <div class="left-column">
+        <div class="left-column-content">
+            <h3>
+                <span class="gradient-text">Jak</span>
+                <span> pracujeme?</span>
+            </h3>
+            <p class="sub-title">Každý projekt je pro nás příběhem, který tvoříme krok za krokem. Od prvotní konzultace až po finální dodání dbáme na kvalitu, inovaci a spokojenost našich klientů.</p>
+            <app-logo-card></app-logo-card>
+        </div>
+    </div>
+    <div class="right-column">
+        <div class="stepper-outer-container">
+            <app-stepper></app-stepper>
+        </div>
+    </div>
 </div>
