--- a/src/app/feature/contact-form/contact-form.component.scss
+++ b/src/app/feature/contact-form/contact-form.component.scss
@@ -1,25 +1,37 @@
 .form-container {
-  width: 300px;
+  width: 70%;
   margin: 0 auto;
-  padding: 20px;
-  border-radius: 8px;
-  background-color: #f9f9f9;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  padding: 35px;
+  border-radius: 40px;
+  background-color: #ffffff;
 }
 
 h2 {
-  text-align: center;
+  text-align: left;
+  font-size: 25px;
+  font-weight: 500;
+  font-family: "Inter", sans-serif;
+  margin: 0;
 }
 
-.form-field {
-  margin-bottom: 15px;
+p {
+  font-size: 12px;
+  font-family: "Inter", sans-serif;
+  margin: 0;
+  color: #575f6e;
+  margin-top: 10px;
+  margin-bottom: 40px;
 }
 
-label {
-  font-size: 14px;
-  font-weight: bold;
-  display: block;
-  margin-bottom: 5px;
+.form-field input {
+  margin-bottom: 25px;
+  border: none;
+  border-bottom: 1px solid #ccc;
+  flex: 1;
+  font-size: 1em;
+  background: transparent;
+  padding: 5px 0;
+  color: #333;
 }
 
 input {
@@ -34,11 +46,12 @@ button {
   width: 100%;
   padding: 10px;
   font-size: 16px;
-  background-color: #2889FC;
+  background-color: #2889fc;
   color: white;
   border: none;
-  border-radius: 4px;
+  border-radius: 40px;
   cursor: pointer;
+  margin-top: 60px;
 }
 
 button:disabled {
