--- a/src/app/feature/contacts/contacts.component.html
+++ b/src/app/feature/contacts/contacts.component.html
@@ -1,16 +1,31 @@
 <div class="contact-container">
-  <div class="left-side">
-    <h3>Spojte se s námi</h3>
-    <p>Máte nápad, otázku nebo potřebujete poradit? Jsme tu pro vás. Jsme připraveni odpovědět na vaše dotazy a začít spolupráci. Ozvěte se a společně nastartujeme váš projekt.</p>
-    <div class="contact-card"><img src="assets/svg/mail.svg" alt="mail"><span>nasemailcompany.cz</span></div>
-    <div class="contact-card"><img src="assets/svg/telephone.svg" alt="mail"><span>+420 703 172 182</span></div>
-    <div class="contacts-icons-container">
-      <div class="contact-icon"><img src="assets/svg/telegram.svg" alt="telegram"></div>
-      <div class="contact-icon"><img src="assets/svg/linkedin.svg" alt="telegram"></div>
-      <div class="contact-icon"><img src="assets/svg/white-mail.svg" alt="telegram"></div>
+    <div class="left-side">
+        <h3>
+            Spojte se
+            <span class="gradient-text">s námi</span>
+        </h3>
+        <p>Máte nápad, otázku nebo potřebujete poradit? Jsme tu pro vás. Jsme připraveni odpovědět na vaše dotazy a začít spolupráci. Ozvěte se a společně nastartujeme váš projekt.</p>
+        <div class="contact-card">
+            <img src="assets/svg/mail.svg" alt="mail">
+            <span>nasemailcompany.cz</span>
+        </div>
+        <div class="contact-card">
+            <img src="assets/svg/phone-icon.svg" alt="phone">
+            <span>+420 703 172 182</span>
+        </div>
+        <div class="contacts-icons-container">
+            <div class="contact-icon">
+                <img src="assets/svg/telegram.svg" alt="telegram">
+            </div>
+            <div class="contact-icon">
+                <img src="assets/svg/linkedin.svg" alt="telegram">
+            </div>
+            <div class="contact-icon">
+                <img src="assets/svg/white-mail.svg" alt="telegram">
+            </div>
+        </div>
     </div>
-  </div>
-  <div class="right-side">
-    <app-contact-form></app-contact-form>
-  </div>
+    <div class="right-side">
+        <app-contact-form></app-contact-form>
+    </div>
 </div>
