--- a/src/app/feature/how-we-work/how-we-work.component.scss
+++ b/src/app/feature/how-we-work/how-we-work.component.scss
@@ -2,21 +2,32 @@
   display: flex;
   flex-direction: row;
   height: 70vh;
-  background-image: url("/assets/svg/why-us-bg.svg");
-  background-size: cover;
+  background-color: #f6f8fc;
+  position: relative;
+  border-radius: 80px;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+  position: absolute;
 }
 
 .left-column {
+  margin-top: 135px;
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 50%;
+  position: relative;
 }
 
 .right-column {
+  margin-top: 135px;
   width: 50%;
   display: flex;
   justify-content: center;
+  position: relative;
 }
 
 .stepper-outer-container {
@@ -40,4 +51,35 @@
 .sub-title {
   max-width: 65%;
   margin-bottom: 10%;
+}
+
+.gradient-text {
+  font-family: "Poppins";
+  font-weight: 800;
+  font-size: 50px;
+  background: linear-gradient(
+    to right,
+    rgb(35, 138, 255),
+    rgba(135, 198, 255, 1)
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+h3 {
+  font-family: "Poppins";
+  font-weight: 500;
+  font-size: 50px;
+  color: #19213d;
+  margin: 0;
+}
+
+.sub-title {
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  max-width: 600px;
+  margin-top: 20px;
+  margin-bottom: 90px;
 }
