our services redesign

--- a/src/app/shared/components/service-card/service-card.component.html
+++ b/src/app/shared/components/service-card/service-card.component.html
@@ -4,8 +4,8 @@
       <h3 class="card-title">{{title}}</h3>
       <p>{{description}}</p>
     </div>
-    <div>
-      <img alt="cardSvg" [src]="svgSrcImage">
+    <div class="card__sub-image-container">
+      <img class="card__sub-image" alt="cardSvg" [src]="svgSrcImage">
     </div>
   </div>
   <div class="card__image-container">
