--- a/src/app/shared/components/service-card/service-card.component.scss
+++ b/src/app/shared/components/service-card/service-card.component.scss
@@ -1,18 +1,17 @@
 .card {
   display: flex;
   flex-direction: column;
+  align-items: center;
   cursor: pointer;
-  border: 1px solid #ddd;
-  border-radius: 8px;
+  border-radius: 16px;
   overflow: hidden;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  background-color: white;
   transition: transform 0.3s ease;
   width: 18vw;
   height: 45vh;
 }
 
 .card__image {
-  display: block;
   width: 100%;
   height: 100%;
 }
@@ -24,8 +23,27 @@
 }
 
 .card__image-container {
-  position: relative;
+  width: 90%;
+  height: 90%;
+  margin: 10px;
+  border: 1px solid #ddd;
+  border-radius: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+}
+
+.card__sub-image-container {
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.card__sub-image {
+  width: 65%;
+  height: 65%;
 }
