--- a/src/app/feature/how-we-work/how-we-work.component.scss
+++ b/src/app/feature/how-we-work/how-we-work.component.scss
@@ -1,7 +1,7 @@
 .main-container {
   display: flex;
   flex-direction: row;
-  height: 70vh;
+  min-height: 50vh;
   background-image: url("/assets/svg/why-us-bg.svg");
   background-size: cover;
 }
