--- a/src/app/feature/why-us/why-us.component.scss
+++ b/src/app/feature/why-us/why-us.component.scss
@@ -1,7 +1,7 @@
 .why-us {
   position: relative;
   overflow: hidden;
-  min-height: 100vh;
+  min-height: 70vh;
 }
 
 .background {
@@ -56,9 +56,10 @@ h1 span {
 }
 
 .cards-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto auto;
+  gap: 20px;
 }
 
 app-why-us-card {
@@ -66,9 +67,10 @@ app-why-us-card {
 }
 
 .cards-container app-why-us-card:nth-child(-n + 3) {
-  flex: 1 1 30%;
+  grid-column: 1;
 }
 
 .cards-container app-why-us-card:nth-child(4) {
-  flex: 1 1 70%;
+  grid-column: 2;
+  grid-row: 3;
 }
