--- a/src/app/feature/why-us/why-us.component.scss
+++ b/src/app/feature/why-us/why-us.component.scss
@@ -1,4 +1,9 @@
 .why-us {
+  background-color: #F6F8FC;
+  background-image: url('/assets/background-our-services.jpg');
+  background-size: cover;
+  background-position: center;
+  border: 1px solid #ffffff;
   position: relative;
   overflow: hidden;
   min-height: 70vh;
@@ -11,7 +16,6 @@
   width: 100%;
   height: 100%;
   z-index: 0;
-  object-fit: cover;
   object-fit: cover;
   background-position: center center;
   background-repeat: no-repeat;
