--- a/src/app/feature/contact-form/contact-form.component.html
+++ b/src/app/feature/contact-form/contact-form.component.html
@@ -1,10 +1,10 @@
 <div class="form-container">
   <h2>Contacts</h2>
-  <p>These contacts are used to inform about orders</p>
+  <p class="sub-title">These contacts are used to inform about orders</p>
   <form (ngSubmit)="onSubmit()" [formGroup]="contactForm">
     <div class="form-field">
       <label for="telephone">Telephone</label>
-      <input id="telephone" formControlName="telephone" type="tel" placeholder="Enter your phone number">
+      <input class="input-underline" id="telephone" formControlName="telephone" type="tel" placeholder="Enter your phone number">
       <div *ngIf="telephone.invalid && (telephone.dirty || telephone.touched)" class="error">
         <small *ngIf="telephone.errors?.['required']">Telephone is required.</small>
         <small *ngIf="telephone.errors?.['pattern']">Please enter a valid phone number.</small>
@@ -13,7 +13,7 @@
 
     <div class="form-field">
       <label for="email">Email</label>
-      <input id="email" formControlName="email" type="email" placeholder="Enter your email">
+      <input class="input-underline" id="email" formControlName="email" type="email" placeholder="Enter your email">
       <div *ngIf="email.invalid && (email.dirty || email.touched)" class="error">
         <small *ngIf="email.errors?.['required']">Email is required.</small>
         <small *ngIf="email.errors?.['email']">Please enter a valid email.</small>
