--- a/src/app/feature/contact-form/contact-form.component.scss
+++ b/src/app/feature/contact-form/contact-form.component.scss
@@ -1,14 +1,14 @@
 .form-container {
-  width: 300px;
+  width: 70%;
   margin: 0 auto;
   padding: 20px;
-  border-radius: 8px;
-  background-color: #f9f9f9;
+  border-radius: 20px;
+  background-color: #ffffff;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 h2 {
-  text-align: center;
+  text-align: left;
 }
 
 .form-field {
@@ -37,7 +37,7 @@ button {
   background-color: #2889FC;
   color: white;
   border: none;
-  border-radius: 4px;
+  border-radius: 24px;
   cursor: pointer;
 }
 
@@ -48,4 +48,20 @@ button:disabled {
 .error {
   color: red;
   font-size: 12px;
+}
+
+.input-underline {
+  width: 100%;
+  border: none;
+  border-bottom: 2px solid #ddd;
+  background: none;
+  outline: none;
+  font-size: 16px;
+  padding: 5px 0;
+  color: #333;
+  transition: border-color 0.3s ease;
+}
+
+.sub-title {
+  color: rgba(85, 90, 90, 0.51);
 }
