--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -2,14 +2,12 @@
   background-image: url("/assets/header_bg.svg");
   background-size: cover;
   background-position: center;
-  height: 700px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
   border-bottom-left-radius: 80px;
   border-bottom-right-radius: 80px;
-  align-items: stretch;
 }
 
 .header .content {
@@ -42,11 +40,10 @@
   list-style: none;
 }
 
-// Font Style of the Navbar
 .navbar a {
   font-family: "Inter", sans-serif;
   text-decoration: none;
-  color: inherit;
+  color: black;
   font-size: 16px;
   font-weight: 500;
   margin: 0 20px;
@@ -141,4 +138,87 @@
 .nav-container {
   display: flex;
   align-items: center;
+}
+
+
+nav.open {
+  left: 0;
+}
+
+.menu-toggle {
+  display: none;
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  background-color: #ffffff;
+  color: #000000;
+  border: none;
+  font-size: 2rem;
+  cursor: pointer;
+  z-index: 1100;
+}
+
+@media (max-width: 768px) {
+
+  .nav-container {
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .logo h1 {
+    font-size: 30px;
+    margin-left: 20px;
+    font-family: "Poppins", serif;
+    font-weight: 600;
+    color: black;
+  }
+
+  .contact-us-navbar {
+    padding: 10px;
+    margin: 0;
+  }
+
+  .navbar {
+    height: 100%;
+    margin: 0;
+    justify-content: flex-start;
+  }
+
+  nav {
+    position: fixed;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background-color: #ffffff;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    padding-top: 50%;
+    transition: left 0.3s ease;
+    z-index: 1000;
+  }
+
+  nav ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .menu-toggle {
+    display: block;
+  }
+
+  nav ul {
+    justify-content: flex-start;
+  }
+
+  .logo-container {
+    margin-bottom: 20px;
+    width: 80%;
+    height: 80%;
+  }
 }
