about us responsiveness upd

--- a/src/app/feature/about-us/about-us.component.scss
+++ b/src/app/feature/about-us/about-us.component.scss
@@ -16,3 +16,13 @@ p {
   margin-top: 20px;
   max-width: 600px;
 }
+
+@media (max-width: 768px) {
+  .about-us-title {
+    width: 80%;
+  }
+
+  .about {
+    flex-direction: column;
+  }
+}
