--- a/src/app/feature/why-us/why-us.component.html
+++ b/src/app/feature/why-us/why-us.component.html
@@ -1,4 +1,5 @@
 <div class="why-us">
+    <img class="moon" src="/assets/svg/moon.png" alt="Moon">
     <div class="content">
         <h1>
             Proč vybrat
