--- a/src/app/feature/why-us/why-us.component.scss
+++ b/src/app/feature/why-us/why-us.component.scss
@@ -34,9 +34,9 @@ img {
 .moon {
   right: 0;
   position: absolute;
-  top: 400px;
+  top: 30%;
   transform: translateY(-50%);
-  width: 30%;
+  width: 40%;
 }
 
 .content h1 {
