--- a/src/app/shared/components/service-card/service-card.component.scss
+++ b/src/app/shared/components/service-card/service-card.component.scss
@@ -1,19 +1,29 @@
 .card {
   display: flex;
+  justify-content: center;
   flex-direction: column;
   align-items: center;
   cursor: pointer;
-  border-radius: 16px;
+  border-radius: 7px;
   overflow: hidden;
   background-color: white;
   transition: transform 0.3s ease;
-  width: 15vw;
-  height: 40vh;
+  width: 380px;
+  height: 530px;
+  text-align: center;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  margin-bottom: 20px;
+}
+
+.card:hover {
+  transform: translateY(-10px);
 }
 
 .card__image {
-  width: 100%;
-  height: 100%;
+  margin: 0;
+  object-fit: cover;
+  object-position: center;
+  transition: transform 0.3s ease;
 }
 
 .card__content {
@@ -26,24 +36,30 @@
   width: 90%;
   height: 90%;
   margin: 10px;
-  border: 1px solid #ddd;
-  border-radius: 16px;
   display: flex;
   align-items: center;
   justify-content: center;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   overflow: hidden;
 }
 
-.card__sub-image-container {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+h3 {
+  color: #19213d;
+  font-family: "Inter";
+  font-size: 25px;
+  margin: 0 27px;
 }
 
-.card__sub-image {
-  width: 65%;
-  height: 65%;
+p {
+  color: #19213d;
+  font-size: 16px;
+  font-family: "Inter";
+  margin: 0 27px;
+  margin-bottom: 27px;
+  height: 150px;
+}
+
+.divider {
+  border-top: 0.1px solid #d4d4d4;
+  margin: 16px 27px;
+  margin-bottom: 27px;
 }
