--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,38 +1,36 @@
-<header class="header">
-    <div class="content">
-        <nav class="navbar">
-            <div class="logo">
-                <img src="/assets/logo.svg" alt="Logo">
-                <h1>BrivexTech</h1>
-            </div>
-            <div class="nav-container">
-              <a href="#home">O nás</a>
-              <a href="#home">Služby</a>
-              <a href="#home">Náše technologie</a>
-              <a href="#home">Jak pracujeme</a>
-              <button class="contact-us-navbar">
-                Kontaktujte nás nyní
-              </button>
-            </div>
-        </nav>
-        <div class="row">
-            <div class="header-left">
-                <div class="title">
-                    <h1>
-                        Budujeme chytrá řešení
-                        <span class="title">pro zítřek</span>
-                        <img src="/assets/shield.png" alt="">
-                    </h1>
-                </div>
-                <p>Mladí, ambiciózní a připraveni proměnit vaše nápady v efektivní digitální řešení. Pojďme společně vytvořit něco skvělého.</p>
-                <div class="buttons">
-                    <button class="main-cta">
-                        Napište nám
-                        <img src="/assets/message-icon.svg" alt="">
-                    </button>
-                </div>
-            </div>
-            <img class="header-img" src="/assets/header_main_icon.png" alt="">
-        </div>
-    </div>
+
+  <header class="header">
+    <img src="/assets/icons/softbreez.png" alt="Check" class="logo" />
+  <nav [class.open]="menuOpen">
+    <ul class="nav-list">
+      <li><a routerLink="/">Home</a></li>
+      <li><a routerLink="/about">About</a></li>
+      <li><a routerLink="/services">Services</a></li>
+      <li><a routerLink="/contact">Contact</a></li>
+
+    </ul>
+  </nav>
+   <button class="btn-primary">Kontaktujte nás nyní</button>
+  <button class="menu-toggle" (click)="toggleMenu()">
+    ☰
+  </button>
 </header>
+
+<div class="header-container">
+  <div class="after-header-text">
+  <div class="row-with-icon"> 
+  <span class="text">Budoucnost je chytrá</span>
+  <img src="/assets/icons/rocket.svg" alt="Check" class="icon" />
+</div>
+  <h1>Budujeme chytrá řešení pro zítřek</h1>
+  <p>Mladí, ambiciózní a připraveni proměnit vaše nápady v efektivní digitální řešení. Pojďme společně vytvořit něco skvělého.</p>
+</div>
+
+<div class="header-buttons">
+  <button class="btn-primary">Napište nám</button>
+  <button class="btn-secondary">
+      <img src="/assets/icons/about-us.png" alt="Check" class="icon" />
+    Více o nas</button>
+</div>
+</div>
+
