--- a/src/fonts.scss
+++ b/src/fonts.scss
@@ -1,76 +1,55 @@
 @font-face {
   font-display: swap;
-  font-family: "Poppins";
+  font-family: "Geist";
   font-style: normal;
   font-weight: 400;
-  src: url("/assets/fonts/poppins/Poppins-Regular.ttf") format("truetype");
+  src: url("/assets/fonts/geist/Geist-Regular.ttf") format("truetype");
 }
 @font-face {
   font-display: swap;
-  font-family: "Poppins";
+  font-family: "Geist";
   font-style: normal;
   font-weight: 500;
-  src: url("/assets/fonts/poppins/Poppins-Medium.ttf") format("truetype");
+  src: url("/assets/fonts/geist/Geist-Medium.ttf") format("truetype");
 }
 
 @font-face {
   font-display: swap;
-  font-family: "Poppins";
+  font-family: "Geist";
   font-style: normal;
   font-weight: 600;
-  src: url("/assets/fonts/poppins/Poppins-SemiBold.ttf") format("truetype");
+  src: url("/assets/fonts/geist/Geist-SemiBold.ttf") format("truetype");
 }
 
 @font-face {
   font-display: swap;
-  font-family: "Poppins";
+  font-family: "Geist";
   font-style: normal;
   font-weight: 700;
-  src: url("/assets/fonts/poppins/Poppins-Bold.ttf") format("truetype");
+  src: url("/assets/fonts/geist/Geist-Bold.ttf") format("truetype");
 }
 
 @font-face {
   font-display: swap;
-  font-family: "Poppins";
+  font-family: "Geist";
   font-style: normal;
   font-weight: 800;
-  src: url("/assets/fonts/poppins/Poppins-ExtraBold.ttf") format("truetype");
+  src: url("/assets/fonts/geist/Geist-ExtraBold.ttf") format("truetype");
 }
-
-// Inter
 
 @font-face {
   font-display: swap;
-  font-family: "Inter";
+  font-family: "Generalsans";
   font-style: normal;
   font-weight: 400;
-  src: url("/assets/fonts/inter/Inter_18pt-Regular.ttf") format("truetype");
+  src: url("/assets/fonts/generalsans/GeneralSans-Regular.ttf")
+    format("truetype");
 }
 @font-face {
   font-display: swap;
-  font-family: "Inter";
+  font-family: "Generalsans";
   font-style: normal;
   font-weight: 500;
-  src: url("/assets/fonts/inter/Inter_18pt-Medium.ttf") format("truetype");
-}
-@font-face {
-  font-display: swap;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 600;
-  src: url("/assets/fonts/inter/Inter_18pt-SemiBold.ttf") format("truetype");
-}
-@font-face {
-  font-display: swap;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 700;
-  src: url("/assets/fonts/inter/Inter_18pt-Bold.ttf") format("truetype");
-}
-@font-face {
-  font-display: swap;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 800;
-  src: url("/assets/fonts/inter/Inter_18pt-ExtraBold.ttf") format("truetype");
+  src: url("/assets/fonts/generalsans/GeneralSans-Medium.ttf")
+    format("truetype");
 }
