--- a/src/app/feature/our-services/our-services.component.html
+++ b/src/app/feature/our-services/our-services.component.html
@@ -10,5 +10,18 @@
     [description]="card.description"
   ></app-product-card>
 </div>
+<div class="action-card">
+  <div class="action-card-left">
+    <h2>Proměňte svůj nápad ve skutečnost s námi.</h2>
+    <p>Ozvěte se nám a posuňme váš projekt dál.</p>
+    <button class="btn-secondary">Pojďme na to</button>
+  </div>
+  <div class="action-card-right">
+     <img class="img1" src="../../../assets/icons/km.png" alt="Visual" />
+      <img class="img2" src="../../../assets/icons/pb.png" alt="Visual" />
+    <img class="img3" src="../../../assets/icons/pgp.png" alt="Visual" />
+  </div>
+</div>
+
 </div>
 
