--- a/src/app/feature/our-services/our-services.component.scss
+++ b/src/app/feature/our-services/our-services.component.scss
@@ -69,3 +69,131 @@ p {
     padding: 10px 20px;
   }
 }
+
+.action-card {
+  width: 100%;
+  max-width: 1375px;
+  padding: 27px 80px;
+  padding-bottom: 0px;
+  margin: 100px auto;
+  background-color: #f5f6f8;
+  background-image: url("../../../assets/icons/grid-bg.svg");
+  background-size: contain;
+  background-position: center;
+  border: 1px solid #ecedee;
+  border-radius: 0.75rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.action-card-left {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+/* Responsive: 2 columns on medium screens */
+@media (max-width: 900px) {
+  .action-card {
+    max-width: 630px; /* adjust max-width accordingly */
+    padding: 17px 60px;
+  }
+}
+
+/* Responsive: 1 column on small screens */
+@media (max-width: 600px) {
+  .action-card {
+    padding: 10px 20px;
+    max-width: 90%; /* adjust max-width accordingly */
+    padding: 15px 30px;
+  }
+}
+
+.action-card h2 {
+  font-family: "Geist", sans-serif;
+  font-weight: 600;
+  font-size: 3rem;
+  line-height: 3.5rem;
+  color: #242424;
+  margin-bottom: 20px;
+  width: 400px;
+}
+
+@media (max-width: 900px) {
+  .action-card h2 {
+    width: 500px;
+  }
+}
+
+/* Responsive: 1 column on small screens */
+@media (max-width: 600px) {
+  .action-card h2 {
+    width: 100%;
+  }
+}
+
+.action-card p {
+  line-height: 1.5rem;
+  color: #3f3f3fe0;
+  font-weight: 300;
+  font-size: 1rem;
+  font-family: "Generalsans", sans-serif;
+}
+
+.btn-secondary {
+  height: 44px;
+  padding: 0 24px;
+  background-color: transparent;
+  color: #242424;
+  border: 1px solid #242424;
+  border-radius: 50px;
+  font-size: 1rem;
+  font-family: "Geist", sans-serif;
+  font-weight: 500;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 0.3s ease, color 0.3s ease, transform 0.3s ease;
+}
+
+.btn-secondary:hover {
+  transform: scale(0.96);
+  cursor: pointer;
+}
+@keyframes slideUp {
+  0% {
+    opacity: 0;
+    transform: translateY(40px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+.action-card-right .img1 {
+  height: 280px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+
+  border-radius: 20px;
+  animation: slideUp 0.8s ease-out forwards;
+  opacity: 0;
+}
+.action-card-right .img2 {
+  height: 330px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
+
+  border-radius: 20px;
+  animation: slideUp 1.2s ease-out forwards;
+  opacity: 0;
+}
+.action-card-right .img3 {
+  height: 380px;
+  box-shadow: 0 4px 18px rgba(0, 0, 0, 0.5);
+
+  border-radius: 20px;
+  animation: slideUp 1.4s ease-out forwards;
+  opacity: 0;
+}
