--- a/src/app/feature/technologies/technologies.component.html
+++ b/src/app/feature/technologies/technologies.component.html
@@ -1,16 +1,5 @@
-<div class="technologies">
-    <div class="card">
-        <img src="/assets/tech-bg.png" alt="tech background">
-        <div class="content">
-            <div class="header-row">
-                <h1>Moderní technologie pro vaše podnikání</h1>
-                <p>Stavíme na síle pokročilých digitálních nástrojů, které propojují data, zrychlují procesy a otevírají cestu k neomezeným možnostem. Technologie budoucnosti, dnes.</p>
-            </div>
-            <div class="tech-cards">
-                <div *ngFor="let tech of technologies">
-                    <app-card-img [iconSrc]="tech.iconSrc" [iconAlt]="tech.iconAlt"></app-card-img>
-                  </div>
-            </div>
-        </div>
-    </div>
+<div class="main-content">
+    <h2>Moderní technologie pro vaše podnikání</h2>
+    <p>Stavíme na síle pokročilých digitálních nástrojů, které propojují data, zrychlují procesy a otevírají cestu k neomezeným možnostem. Technologie budoucnosti, dnes.</p>
+    <app-carousel></app-carousel>
 </div>
