--- a/src/app/feature/technologies/technologies.component.scss
+++ b/src/app/feature/technologies/technologies.component.scss
@@ -1,56 +1,31 @@
-.technologies {
-  margin-bottom: 130px;
-}
-
-.card {
-  margin: 0 5% 0 5%;
-  background-color: #278aff;
-  border-radius: 60px;
-  position: relative;
-}
-
-.card img {
-  position: absolute;
-  z-index: 1;
-  width: 100%;
-}
-
-.card .content {
-  padding: 50px 70px;
-  color: white;
-  z-index: 2;
-  position: relative;
-}
-
-.card .content h1 {
-  width: 40%;
-  font-family: "Poppins";
-  font-size: 40px;
-  font-weight: 500;
-}
-
-.header-row {
+.main-content {
+  margin-top: 120px;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
   align-items: center;
 }
 
-.header-row p {
-  max-width: 50%;
-  font-size: 18px;
-  font-weight: 400;
-  font-family: "Inter";
-  line-height: 25px;
+h2 {
+  text-align: center;
+  max-width: 600px;
+  margin: 0;
+  font-family: "Geist", sans-serif;
+  font-weight: 600;
+  font-size: 3rem;
+  line-height: 3.5rem;
+  color: #242424;
+  margin-bottom: 20px;
 }
 
-.tech-cards {
-  max-width: 70%;
-  display: flex;
-  justify-content: center;
-  margin-top: 50px;
-  flex-wrap: wrap;
-  gap: 26px;
-  margin: 0 auto;
-  margin-top: 70px;
-  z-index: 2;
+p {
+  align-items: center;
+  max-width: 800px;
+  margin: 0;
+  line-height: 1.5rem;
+  color: #3f3f3fe0;
+  font-weight: 300;
+  font-size: 1rem;
+  font-family: "Generalsans", sans-serif;
+  margin-bottom: 40px;
+  text-align: center;
 }
