Update header styles and background colors for consistency

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,6 +1,7 @@
 
+<div class="header-wrapper">
 
-  <header class="header">
+  <header class="header">`
     <img src="/assets/icons/softbreez.png" alt="Check" class="logo" />
   <nav [class.open]="menuOpen">
     <ul class="nav-list">
@@ -33,6 +34,7 @@
   <button class="btn-secondary">
       <img src="/assets/icons/about-us.png" alt="Check" class="icon" />
     Více o nas</button>
+</div>
 </div>
 </div>
 
