--- a/src/app/shared/components/carousel/carousel.component.scss
+++ b/src/app/shared/components/carousel/carousel.component.scss
@@ -40,7 +40,7 @@
     left: 0;
     background: linear-gradient(
       to right,
-      #f9f9f9,
+      #fcfcfc,
       transparent
     ); // Adjust background color if needed
   }
@@ -49,7 +49,7 @@
     right: 0;
     background: linear-gradient(
       to left,
-      #f9f9f9,
+      #fcfcfc,
       transparent
     ); // Adjust background color if needed
   }
