--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,7 +40,7 @@ $brivex-website-theme: mat.define-light-theme(
 
 html,
 body {
-  background-color: #f9f9f9;
+  background-color: #fcfcfc;
   margin: 0;
   padding: 0;
   max-width: 100%;
